@@ -6,6 +6,7 @@ version 0.11.0:
 	* Can optionally run command to play sound files
 	* Icons for ICQ plugin (blatently stolen from GnomeICU)
 	* Icons for Yahoo plugin (not-so-blatently stolen from GTKYahoo)
+	* Optionally display warning level next to name in buddy list
 
 version 0.11.0-pre2 (12/04/2000):
 	* Fixed a segfault with a bad util.c 
